--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -1,3 +1,5 @@
 @import "./base/settings.scss";
 @import "./base/body.scss";
 @import "./components/homepage.scss";
+@import "./components/_organizeTables";
+@import "./components/_table";
