--- a/src/client/styles/components/_table.scss
+++ b/src/client/styles/components/_table.scss
@@ -1,14 +1,30 @@
 .table-basic {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 80px;
     height: 80px;
-    background: rgb(218, 218, 218);
-    border: 3px solid green;    
-}
-.fa-utensils {
-    font-size: 25px;
-    text-align: center;
-    color: indigo;
+    background: #e1d62f;
+    border: 3px solid #af0f0f;   
+    
+    .fa-utensils {
+        font-size: 27px;
+        text-align: center;
+        color: #af0f0f;
+    }
+    .seat-1 {
+        position: absolute;
+        top: -10px;
+        width: 40px;
+        height: 5px;
+        background: green;
+    }
+    .seat-2 {
+        position: absolute;
+        bottom: -10px;
+        width: 40px;
+        height: 5px;
+        background: green;
+    }
 }
