--- a/src/client/styles/base/_body.scss
+++ b/src/client/styles/base/_body.scss
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Montserrat', Helvetica, Arial, sans-serif;
   font-size: 1.6rem;
   line-height: 1.6;
 }
