--- a/src/client/styles/components/_organizeTables.scss
+++ b/src/client/styles/components/_organizeTables.scss
@@ -11,17 +11,32 @@
     .selection-area {
         width: 100%;
         height: 20vh;
+        min-height: 180px; 
         border-bottom: 3px solid green;
         display: flex;
         justify-content: start;
         align-items: center;
+        background: #e5e5e5;
+
         .generate-table {
             height: 100%;
             width: 300px;
             display: flex;
             justify-content: center;
             align-items: center;
+
+            .table-wrap {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 180px;
+                height: 180px;
+                border: 2px solid #000;
+                background: #514f4f;
+                border-radius: 50%;
+            }
         }
+
         .seats-select {
             height: 100%;
             width: 300px;
@@ -30,14 +45,56 @@
             flex-direction: column;
             align-items: center;
             margin-top: 50px;
+            
             h2 {
                 margin: 20px;
+            }
+
+            select {
+                height: 30px;
+                width: 150px;
+                padding: 3px;
+            }
+        }
+
+        .rotateDel {
+            height: 100%;
+            width: 300px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            button {
+                width: 150px;
+                height: 45px;
+                margin: 5px;
+                border: 2px solid #363637;
+                transition: all .2s;
+                
+                &:hover {
+                   background: #363637;
+                   color: #fff; 
+                   cursor: pointer;
+                }
             }
         }
     }
 }
-.restoraunt-area {
+.restoraunt-area {      
+    position: relative;  
+    margin: 10px; 
     max-width: 100vw;
-    height: 80vh;
-    margin: 10px;
+    min-height: 80vh;    
+    
+    &:before {
+        content: "";
+        background: #5e5d5d;
+        top: -10px;
+        left: -10px;
+        right: -10px;
+        bottom: 20px;
+        height: calc(80vh + 20px);        
+        position: absolute;
+     }
 }
+    
