--- a/src/client/styles/components/_table.scss
+++ b/src/client/styles/components/_table.scss
@@ -5,35 +5,36 @@
     align-items: center;
     width: 80px;
     height: 80px;
-    background: #e1d62f;
-    border: 3px solid #af0f0f;   
-    cursor: pointer;
+    background: #42ba8a;
+    // #429cba, #ba4277, #ba4f42
+    border: 3px solid #c4ff76;   
+    cursor: pointer;    
     
     .fa-utensils {
         font-size: 27px;
         text-align: center;
-        color: #af0f0f;
+        color: #d9f4ff;
     }
     .seat-1 {
         position: absolute;
         top: -10px;
-        width: 40px;
+        width: 40px;        
         height: 5px;
-        background: green;
+        background: #fff555;
     }
     .seat-2 {
         position: absolute;
-        bottom: -10px;
+        bottom: -10px;        
         width: 40px;
         height: 5px;
-        background: green;
+        background: #fff555;
     }
     .seat-3 {
         position: absolute;
         left: -28px;
         width: 40px;
         height: 5px;
-        background: green;
+        background: #fff555;
         transform: rotate(90deg);
     }
     .seat-4 {
@@ -41,21 +42,44 @@
         right: -28px;
         width: 40px;
         height: 5px;
-        background: green;
+        background: #fff555;
         transform: rotate(90deg);
     }
-    // .seat-5 {
-    //     position: absolute;
-    //     top: -10px;
-    //     width: 40px;
-    //     height: 5px;
-    //     background: green;       
-    // }
-    // .seat-6 {
-    //     position: absolute;
-    //     bottom: -10px;
-    //     width: 40px;
-    //     height: 5px;
-    //     background: green;        
-    // }
+    .seat-5 {
+        position: absolute;
+        top: -10px;
+        right: 15%;
+        width: 40px;
+        height: 5px;
+        background: #fff555;       
+    }
+    .seat-6 {
+        position: absolute;
+        bottom: -10px;
+        right: 15%;
+        width: 40px;
+        height: 5px;
+        background: #fff555;        
+    }
+    .seat-7 {
+        position: absolute;
+        left: -28px;
+        bottom: 15%;
+        width: 40px;
+        height: 5px;
+        background: #fff555;
+        transform: rotate(90deg);  
+    }
+    .seat-8 {
+        position: absolute;
+        right: -28px;
+        bottom: 15%;
+        width: 40px;
+        height: 5px;
+        background: #fff555;
+        transform: rotate(90deg);     
+    }
+}
+.scale {
+    transform: scale(.7);
 }
