collected admin restaurant data

--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -1,5 +1,6 @@
 @import "./base/settings.scss";
 @import "./base/body.scss";
 @import "./components/homepage.scss";
-@import "./components/_organizeTables";
-@import "./components/_table";
+@import "./components/_organizeTables.scss";
+@import "./components/_table.scss";
+@import "./components/front";
