--- a/src/client/styles/components/_table.scss
+++ b/src/client/styles/components/_table.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     width: 80px;
-    height: 80px;
+    height: 80px;    
     background: #42ba8a;
     // #429cba, #ba4277, #ba4f42
     border: 3px solid #c4ff76;   
@@ -14,6 +14,7 @@
         font-size: 27px;
         text-align: center;
         color: #d9f4ff;
+        pointer-events:none;        
     }
     .seat-1 {
         position: absolute;
@@ -21,6 +22,7 @@
         width: 40px;        
         height: 5px;
         background: #fff555;
+        pointer-events:none;
     }
     .seat-2 {
         position: absolute;
@@ -28,6 +30,7 @@
         width: 40px;
         height: 5px;
         background: #fff555;
+        pointer-events:none;
     }
     .seat-3 {
         position: absolute;
@@ -36,6 +39,7 @@
         height: 5px;
         background: #fff555;
         transform: rotate(90deg);
+        pointer-events:none;
     }
     .seat-4 {
         position: absolute;
@@ -44,6 +48,7 @@
         height: 5px;
         background: #fff555;
         transform: rotate(90deg);
+        pointer-events:none;
     }
     .seat-5 {
         position: absolute;
@@ -51,7 +56,8 @@
         right: 15%;
         width: 40px;
         height: 5px;
-        background: #fff555;       
+        background: #fff555;  
+        pointer-events:none;     
     }
     .seat-6 {
         position: absolute;
@@ -59,7 +65,8 @@
         right: 15%;
         width: 40px;
         height: 5px;
-        background: #fff555;        
+        background: #fff555;     
+        pointer-events:none;   
     }
     .seat-7 {
         position: absolute;
@@ -69,6 +76,7 @@
         height: 5px;
         background: #fff555;
         transform: rotate(90deg);  
+        pointer-events:none;
     }
     .seat-8 {
         position: absolute;
@@ -77,7 +85,8 @@
         width: 40px;
         height: 5px;
         background: #fff555;
-        transform: rotate(90deg);     
+        transform: rotate(90deg);  
+        pointer-events:none;   
     }
 }
 .scale {
