--- a/src/client/styles/components/_organizeTables.scss
+++ b/src/client/styles/components/_organizeTables.scss
@@ -13,8 +13,11 @@
     cursor: pointer;
     }
 }
-
-* body {
+html {
+    max-height: 100vh;
+    max-width: 100vw;
+}
+* body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -105,7 +108,9 @@
     margin: 10px; 
     max-width: 100vw;
     min-height: 80vh;    
-    
+    max-height: 80vh;
+    // overflow: hidden;
+
     &:before {
         content: "";
         background: #5e5d5d;
@@ -113,7 +118,8 @@
         left: -10px;
         right: -10px;
         bottom: 20px;
-        height: calc(80vh + 20px);        
+        height: calc(80vh + 20px);     
+        // overflow: hidden;   
         position: absolute;
      }
 
