scaling created tables on front

--- a/src/client/styles/components/_front.scss
+++ b/src/client/styles/components/_front.scss
@@ -12,28 +12,41 @@ body {
     align-items: center;    
     background: #e5e5e5;
 }
-.front {    
-
-    .table-basic {
+.restoraunt-wrap {
+    position: relative;
+    margin: 10px;    
+    &:before {
+        content: "";
         position: absolute;
-        box-sizing: border-box;
-        transition: all .3s;
+        background: #5e5d5d;
+        top: -10px;
+        left: -10px;
+        right: -10px;
+        bottom: -20px;       
+     }
 
-        &:hover {
-            border: 3px solid #eceaea;
-            background: #0fbe3bad !important;
-        }
-
-        div {
+    .front {   
+       
+        .table-basic {
+            position: absolute;
+            box-sizing: border-box;
             transition: all .3s;
-        }
-        
-        @for $i from 1 through 8 {
-            &:hover div:nth-child(#{$i}){                
-                background: #838181;
+
+            &:hover {
+                border: 3px solid #eceaea;
+                background: #0fbe3bad !important;
             }
-        }
+
+            div {
+                transition: all .3s;
+            }
+            
+            @for $i from 1 through 8 {
+                &:hover div:nth-child(#{$i}){                
+                    background: #838181;
+                }
+            }
+            }     
         }     
-    }     
-}
-   
+    }
+}   
