--- a/src/client/styles/components/_front.scss
+++ b/src/client/styles/components/_front.scss
@@ -1,51 +1,73 @@
 body {
     height: 100vh;
     width: 100vw;
+    background: #d3d3d3;
 
-.selection {
-    width: 100%;
-    height: 20vh;
-    min-height: 180px; 
-    border-bottom: 3px solid green;
-    display: flex;
-    justify-content: center;
-    align-items: center;    
-    background: #e5e5e5;
-}
-.restoraunt-wrap {
-    position: relative;
-    margin: 10px;    
-    &:before {
-        content: "";
-        position: absolute;
-        background: #5e5d5d;
-        top: -10px;
-        left: -10px;
-        right: -10px;
-        bottom: -20px;       
-     }
+    .restoraunt-front {
+        width: 100vw;
+        min-height: 100vh;      
+    }
 
-    .front {   
-       
-        .table-basic {
+    .selection {
+        width: 100%;
+        height: 20vh;
+        min-height: 200px; 
+        border-bottom: 3px solid green;
+        display: flex;
+        justify-content: center;
+        align-items: center;    
+        background: #e5e5e5;
+    }
+
+    .restoraunt-wrap {
+        position: relative;
+        box-sizing: border-box;       
+        margin: 30px auto;
+        max-width: 100vw;
+        width: 90vw;
+        transform-origin: 0 0;      
+        -moz-transform-origin: 0 0;
+        -o-transform-origin: 0 0;
+        -webkit-transform-origin: 0 0; 
+        
+        &:before {
+            content: "";
             position: absolute;
-            box-sizing: border-box;
-            transition: all .3s;
+            background: #5e5d5d;
+            border: 3px solid green;        
+            top: -15px;
+            left: -15px;
+            right: -15px;
+            bottom: -15px;       
+        }
+        
+        .restoraunt-area {   
+            margin: 0;
 
-            &:hover {
-                border: 3px solid #eceaea;
-                background: #0fbe3bad !important;
+            &:before {
+                border: none;
+                background: none;
             }
 
-            div {
+            .table-basic {
+                position: absolute;
+                box-sizing: border-box;
                 transition: all .3s;
-            }
-            
-            @for $i from 1 through 8 {
-                &:hover div:nth-child(#{$i}){                
-                    background: #838181;
+
+                &:hover {
+                    border: 3px solid #eceaea;
+                    background: #0fbe3bad !important;
                 }
-            }
+
+                div {
+                    transition: all .3s;
+                }
+                
+                @for $i from 1 through 8 {
+                    &:hover div:nth-child(#{$i}){                
+                        background: #838181;
+                    }
+                }
             }     
         }     
     }
