--- a/src/client/styles/components/_organizeTables.scss
+++ b/src/client/styles/components/_organizeTables.scss
@@ -1,57 +1,130 @@
 
+// Devices
+$phone-small: 400px;
+$phone: 576px;
+$tablet: 768px;
+$laptop: 992px;
+$desktop: 1200px;
+
+// Mixins
+@mixin responsive($device) {
+    @media (max-width: #{$device}) {
+        @content;
+    }
+}
+
 @mixin buttonStyle {
     width: 150px;
-    height: 45px;
-    margin: 5px;
+    height: 35px;
+    margin: 2px;
     font-size: 15px;
     border: 2px solid #363637;
     transition: all .2s;
 
     &:hover {
-    background: #363637;
-    color: #fff; 
-    cursor: pointer;
+        background: #363637;
+        color: #fff; 
+        cursor: pointer;
+    }
+
+    &:focus {
+        outline: none;
     }
 }
+
 html {
     max-height: 100vh;
     max-width: 100vw;
 }
+
 * body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 .restaurant-organize {
     width: 100vw;
     min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+    background: #d3d3d3;
 
-    .selection-area {
+    .selection-area {       
         width: 100%;
-        height: 20vh;
+        height: 200px;
         min-height: 180px; 
         border-bottom: 3px solid green;
         display: flex;
         justify-content: start;
-        align-items: center;
+        align-items: center;       
         background: #e5e5e5;
 
+        @include responsive($tablet) {
+            flex-flow: column wrap;
+        }
+
         .generate-table {
+            position: relative;
             height: 100%;
+            min-width: 200px;
             width: 300px;
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: center;            
+
+            @include responsive($tablet) {
+                width: 185px;
+            }
+
+            .sizeBtn {
+                width: 35px;
+                height: 35px;
+                border: 1px solid rgb(59, 59, 59);
+                border-radius: 50%;
+                position: absolute;
+                font-size: 18px;
+                transition: all .3s;
+
+                &:focus {
+                    outline: none;
+                }
+                &:hover {
+                    background: #363637;
+                    color: #fff;
+                    cursor: pointer;
+                }
+
+                @include responsive($tablet) {
+                    &:hover {
+                    border: 1px solid #c4ff76;
+                    cursor: pointer;
+                    }
+                }
+            }
+
+            .increase {
+                top: 15px;
+                right: 10px;
+            }
+
+            .decrease {
+                bottom: 15px;
+                right: 10px;
+            }
 
             .table-wrap {
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                width: 180px;
-                height: 180px;
+                width: 190px;
+                height: 190px;
                 border: 2px solid #000;
                 background: #514f4f;
                 border-radius: 50%;
+                overflow: hidden;
             }
         }
 
@@ -59,67 +132,123 @@ html {
             height: 100%;
             width: 300px;
             display: flex;
-            justify-content: start;
-            flex-direction: column;
-            align-items: center;
-            margin-top: 50px;
+            justify-content: center;            
+            align-items: center;              
             
+            @include responsive($tablet) {
+                height: 70px;
+                margin: 0;
+            }
+            
+            @include responsive($phone) {
+                width: 200px;
+            }
+
+            @include responsive($phone-small) {                    
+                width: 110px;
+                height: 60px;
+            }
+
             h2 {
                 margin: 20px;
             }
 
             select {
-                height: 30px;
-                width: 150px;
-                padding: 3px;
+                height: 40px;
+                width: 185px;
+                padding: 8px;
+                font-size: 15px;
+
+                @include responsive($tablet) {                       
+                    height: 35px;                      
+                }
+
+                @include responsive($phone-small) {
+                    width: 110px;       
+                    height: 30px;    
+                    font-size: 13px;  
+                    padding: 3px; 
+                }
             }
         }
 
         .rotateDel {
             height: 100%;
-            width: 300px;
-            display: flex;
-            flex-direction: column;
+            width: 320px;
+            display: flex;           
             justify-content: center;
+            align-items: center;
+            flex-flow: column wrap;
+
+            @include responsive($tablet) {
+                height: 100px;
+            }
+
+            @include responsive($phone) {
+                width: 200px;
+            }
+
+            @include responsive($phone-small) {
+                width: 110px;       
+                height: 130px;        
+            }
 
             button {
                 @include buttonStyle;
+                
+                @include responsive($phone) {
+                    width: 90px;
+                }    
+                
+                @include responsive($phone-small) {                    
+                    height: 28px;
+                    font-size: 13px;
+                }
+    
             }
         }
-
-        .goToFront {
-            button {
-                @include buttonStyle;
-
-                &:hover a {
-                    color: #fff;
-                }
-
-                a {
-                    text-decoration: none;
-                    color: #000;                    
-                }
+       
+        .toFront {
+            border: 2px solid forestgreen !important;
+            @include buttonStyle;      
+            
+            &:hover {
+                background: forestgreen !important;
             }
-        }
+
+            &:hover a {
+                color: #fff;
+            }
+
+            a {               
+                text-decoration: none;
+                color: #000;                    
+            }
+        }        
     }
 }
-.restoraunt-area {      
+
+.restoraunt-area {    
+    box-sizing: border-box;  
     position: relative;  
-    margin: 10px; 
+    margin: 30px 15px;
     max-width: 100vw;
-    min-height: 80vh;    
-    max-height: 80vh;
-    // overflow: hidden;
+    width: 90vw;
+    min-height: 80vh;  
+    transform-origin: 0 0;      
+    -moz-transform-origin: 0 0;
+    -o-transform-origin: 0 0;
+    -webkit-transform-origin: 0 0;  
 
     &:before {
         content: "";
         background: #5e5d5d;
-        top: -10px;
-        left: -10px;
-        right: -10px;
-        bottom: 20px;
-        height: calc(80vh + 20px);     
-        // overflow: hidden;   
+        border: 3px solid green;    
+        top: -15px;
+        left: -15px;
+        right: -15px;
+        bottom: -15px;
+        height: calc(80vh + 30px);
         position: absolute;
      }
 
