--- a/src/client/styles/components/_organizeTables.scss
+++ b/src/client/styles/components/_organizeTables.scss
@@ -1,18 +1,4 @@
 
-// Devices
-$phone-small: 400px;
-$phone: 576px;
-$tablet: 768px;
-$laptop: 992px;
-$desktop: 1200px;
-
-// Mixins
-@mixin responsive($device) {
-    @media (max-width: #{$device}) {
-        @content;
-    }
-}
-
 @mixin buttonStyle {
     width: 150px;
     height: 35px;
@@ -91,6 +77,7 @@ html {
                 &:focus {
                     outline: none;
                 }
+
                 &:hover {
                     background: #363637;
                     color: #fff;
@@ -158,6 +145,10 @@ html {
                 width: 185px;
                 padding: 8px;
                 font-size: 15px;
+
+                &:focus {
+                    outline: none;
+                }
 
                 @include responsive($tablet) {                       
                     height: 35px;                      
