empty table data alert message

--- a/src/client/styles/base/_body.scss
+++ b/src/client/styles/base/_body.scss
@@ -10,6 +10,9 @@ body {
   font-family: 'Montserrat', Helvetica, Arial, sans-serif;
   font-size: 1.6rem;
   line-height: 1.6;
+  height: 100vh;
+  width: 100vw;
+  background: #d3d3d3;
 }
 
 button {
