--- a/src/client/styles/components/_homepage.scss
+++ b/src/client/styles/components/_homepage.scss
@@ -1,3 +1,19 @@
 .homepage {
-  color: red;
+  color:#d00606;
+  padding: 40px;
+
+    button {
+        width: 210px;
+        height: 40px;
+        border: 2px solid #000; 
+        transition: all .3s; 
+        
+        a {
+            text-decoration: none;
+        }
+
+        &:hover {
+            font-size: 17px;
+        }
+    }  
 }
